--- a/libs/to-mark/package.json
+++ b/libs/to-mark/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "",
+  "name": "toMark",
   "version": "0.0.0",
   "private": true,
-  "author": "NHNEntertainment",
-  "license": "ISC",
+  "author": "Sungho Kim / FE Development Team / NHN Entertainment.",
+  "license": "MIT",
   "devDependencies": {
     "browserify": "^8.1.3",
     "browserify-istanbul": "^0.1.3",
