디펜던시 모듈들 업데이트

--- a/libs/to-mark/package.json
+++ b/libs/to-mark/package.json
@@ -16,19 +16,20 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
     "karma": "^0.12.31",
     "karma-browserify": "^3.0.1",
     "karma-chrome-launcher": "^0.1.7",
-    "karma-firefox-launcher": "^0.1.4",
     "karma-coverage": "git+https://github.com/everedifice/karma-coverage.git",
     "karma-failed-reporter": "0.0.3",
-    "karma-junit-reporter": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-narrow-reporter": "^1.0.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-source-map-support": "^1.0.0",
     "karma-webdriver-launcher": "git+https://github.com/everedifice/karma-webdriver-launcher.git",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.3.0"
   }
 }
