--- a/libs/to-mark/package.json
+++ b/libs/to-mark/package.json
@@ -16,7 +16,7 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
-    "karma": "^0.12.31",
+    "karma": "^0.12.33",
     "karma-browserify": "^4.2.1",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.3.1",
@@ -27,7 +27,7 @@
     "karma-narrow-reporter": "^1.0.5",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-source-map-support": "^1.0.0",
-    "karma-webdriver-launcher": "^1.0.3",
+    "karma-webdriver-launcher": "git+https://github.com/everedifice/karma-webdriver-launcher.git",
     "phantomjs": "^1.9.17",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
