--- a/libs/to-mark/bower.json
+++ b/libs/to-mark/bower.json
@@ -1,12 +1,15 @@
 {
   "name": "toMark",
-  "version": "0.5.0",
+  "version": "0.1.0",
   "authors": [
-    "Sungho Kim / FE Development Team / NHN Entertainment."
+    "Sungho Kim <shirebeat@gmail.com>",
+    "NHN Entertainment"
   ],
-  "main": "src/index.js",
+  "main": [
+      "dist/toMark.js",
+      "dist/toMark.min.js"
+  ],
   "license": "MIT",
-  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
