--- a/libs/to-mark/package.json
+++ b/libs/to-mark/package.json
@@ -14,6 +14,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-strip-debug": "^1.0.2",
+    "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
     "karma": "^0.12.33",
