--- a/libs/to-mark/bower.json
+++ b/libs/to-mark/bower.json
@@ -7,9 +7,9 @@
         "email": "shirenbeat@gmail.com"
     }
   ],
-  "moduleType": {
+  "moduleType": [
       "globals"
-  },
+  ],
   "main": [
       "dist/toMark.js"
   ],
