--- a/libs/to-mark/.eslintrc
+++ b/libs/to-mark/.eslintrc
@@ -8,22 +8,24 @@
   },
   "globals": {
     "ne": true,
-    "prism": true,
+    "Prism": true,
     "rangy": true,
-    "loadfixtures": true
+    "loadFixtures": true
   },
   "rules": {
-    //possible errors
+    "strict": [2, "global"],
+
+    //Possible Errors
     "no-console": 1,
     "no-extra-parens": 0,
-    "no-reserved-keys": 2,
+    "quote-props": [2, consistent],
     "valid-jsdoc": [2, {
         "requireReturn": false
     }],
     "valid-typeof": 1,
 
 
-    //best practices
+    //Best Practices
     "block-scoped-var": 2,
     "complexity": 1,
     "default-case": 2,
@@ -37,14 +39,13 @@
     "radix": 2,
     "vars-on-top": 2,
     "wrap-iife": [2, "any"],
-    "consistent-return": 0,
 
-    //variables
+    //Variables
     "no-undefined": 2,
     "no-use-before-define": [2, "nofunc"],
 
-    //stylistic issues
-    "brace-style": [2, "1tbs", {"allowsingleline": true}],
+    //Stylistic Issues
+    "brace-style": [2, "1tbs", {"allowSingleLine": true}],
     "comma-spacing": [2, {"before": false, "after": true}],
     "comma-style": [2, "last"],
     "eol-last": 1,
@@ -57,16 +58,17 @@
     "quotes": [1, "single"],
     "one-var": 0,
     "padded-blocks": [2, "never"],
-    "space-after-function-name": 2,
+    "space-before-function-paren": [2, "never"],
     "space-after-keywords": 2,
     "space-before-blocks": 2,
-    "space-in-brackets": 2,
+    "object-curly-spacing": [2, "never"],
+    "array-bracket-spacing": [2, "never"],
     "space-in-parens": 2,
 
-    //node.js
+    //Node.js
     "no-mixed-requires": [2, true],
 
-    //legacy
+    //Legacy
     "no-plusplus": 2
   }
 }
