--- a/libs/to-mark/package.json
+++ b/libs/to-mark/package.json
@@ -5,33 +5,35 @@
   "author": "Sungho Kim / FE Development Team / NHN Entertainment.",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^10.2.4",
-    "browserify-istanbul": "^0.2.1",
-    "gulp": "^3.8.10",
-    "gulp-connect": "^2.2.0",
-    "gulp-eslint": "^1.0.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-csslint": "^0.3.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-livereload": "^3.7.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-strip-debug": "^1.0.2",
     "gulp-sync": "^0.1.4",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.3",
-    "karma": "^0.13.10",
-    "karma-browserify": "^4.2.1",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.3.1",
-    "karma-failed-reporter": "0.0.3",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.5",
-    "karma-junit-reporter": "^0.2.2",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-ajax": "^0.1.13",
+    "karma-jasmine-jquery": "^0.1.1",
+    "karma-junit-reporter": "^1.1.0",
     "karma-narrow-reporter": "^1.1.1",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "karma-source-map-support": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.6",
     "karma-webdriver-launcher": "git+https://github.com/everedifice/karma-webdriver-launcher.git",
-    "phantomjs": "^1.9.17",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^3.2.2"
+    "karma-webpack": "^1.7.0",
+    "webpack": "^1.12.10",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "scripts": {
+    "doc": "./node_modules/.bin/jsdoc -c jsdoc-conf.json -t ./node_modules/fedoc-template/"
   }
 }
