--- a/libs/to-mark/package.json
+++ b/libs/to-mark/package.json
@@ -22,11 +22,13 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.1.0",
     "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-ajax": "^0.1.13",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-junit-reporter": "^1.1.0",
     "karma-narrow-reporter": "^1.1.1",
+    "karma-sauce-launcher": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webdriver-launcher": "git+https://github.com/everedifice/karma-webdriver-launcher.git",
     "karma-webpack": "^1.7.0",
@@ -34,6 +36,8 @@
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "doc": "./node_modules/.bin/jsdoc -c jsdoc-conf.json -t ./node_modules/fedoc-template/"
+    "doc": "./node_modules/.bin/jsdoc -c jsdoc-conf.json -t ./node_modules/fedoc-template/",
+    "build": "gulp build",
+    "test": "karma start"
   }
 }
