--- a/libs/to-mark/package.json
+++ b/libs/to-mark/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toMark",
-  "version": "0.0.17-pre",
+  "version": "0.0.17",
   "private": true,
   "author": "Sungho Kim / FE Development Team / NHN Entertainment.",
   "license": "MIT",
