--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -4,7 +4,9 @@
   "description": "TOAST UI Editor : Code Syntax Highlight Plugin",
   "keywords": [
     "nhn",
+    "toast",
     "toastui",
+    "toast-ui",
     "editor",
     "plugin",
     "codeblock",
@@ -14,18 +16,21 @@
   "files": [
     "dist/*.js"
   ],
-  "author": "NHN. FE Development Lab",
+  "author": "NHN FE Development Lab <dl_javascript@nhn.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/nhn/tui.editor.git",
     "directory": "plugins/code-syntax-highlight"
   },
+  "bugs": {
+    "url": "https://github.com/nhn/tui.editor/issues"
+  },
+  "homepage": "https://ui.toast.com",
   "browserslist": "last 2 versions, not ie <= 10",
   "scripts": {
     "test": "karma start --no-single-run",
     "test:ne": "cross-env KARMA_SERVER=ne karma start",
-    "serve:editor": "npx lerna run --scope tui-editor serve",
     "serve": "webpack-dev-server",
     "build:cdn": "webpack --mode=production --cdn & webpack --mode=production --cdn --minify",
     "build:cdn-all": "webpack --mode=production --cdn --all & webpack --mode=production --cdn --all --minify",
@@ -55,7 +60,7 @@
     "karma-webpack": "^4.0.2",
     "prettier": "^1.19.1",
     "terser-webpack-plugin": "^2.3.1",
-    "tui-editor": "file:../../apps/editor",
+    "@toast-ui/editor": "file:../../apps/editor",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
