chore: add build script and move sample files

--- a/libs/markdown-parser/package.json
+++ b/libs/markdown-parser/package.json
@@ -4,6 +4,7 @@
   "description": "Markdown Parser",
   "scripts": {
     "start": "webpack-dev-server",
+    "build": "webpack --mode=production",
     "test": "jest --watch"
   },
   "keywords": [],
