--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -13,7 +13,7 @@
     "preview",
     "gfm"
   ],
-  "main": "dist/tui-editor.js",
+  "main": "dist/toastui-editor.js",
   "files": [
     "dist",
     "index.d.ts"
