feat: seperate layout style of editor

--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -44,7 +44,7 @@
     "serve:all": "webpack-dev-server --all",
     "build:i18n": "cross-env webpack --config scripts/webpack.config.i18n.js && webpack --config scripts/webpack.config.i18n.js --minify",
     "build:prod": "cross-env webpack --mode=production && webpack --mode=production --minify && node tsBannerGenerator.js",
-    "build:copy": "cd dist && rm -rf cdn && mkdir cdn && mv *.min.* *all.js cdn/ && cp -r *viewer.* *.css cdn/ && cp -r i18n cdn/i18n/ && rm -rf cdn/*editor.min.js i18n/*.min.js",
+    "build:copy": "cd dist && rm -rf cdn && mkdir cdn && mv *.min.* *all.js cdn/ && cp -r *viewer.* *.css cdn/ && cp -r i18n cdn/i18n/ && rm -rf cdn/*editor.min.js i18n/*.min.js cdn/*-layout.css",
     "build": "npm run build:i18n && npm run build:prod && npm run build:copy",
     "note": "tui-note --tag=$(git describe --tags)",
     "tslint": "tslint index.d.ts",
@@ -63,7 +63,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-istanbul": "^6.0.0",
     "clean-css": "^4.2.1",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
