feat: Adding Custom Markdown Renderer option to Editor (fixes #485)

--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -48,7 +48,8 @@
     "note": "tui-note --tag=$(git describe --tags)",
     "tslint": "tslint index.d.ts",
     "doc:serve": "tuidoc --serv",
-    "doc": "tuidoc"
+    "doc": "tuidoc",
+    "debug": "karma run --grep=customMarkdownRenderer"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
