--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -48,8 +48,7 @@
     "note": "tui-note --tag=$(git describe --tags)",
     "tslint": "tslint index.d.ts",
     "doc:serve": "tuidoc --serv",
-    "doc": "tuidoc",
-    "debug": "karma run --grep=customMarkdownRenderer"
+    "doc": "tuidoc"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
