--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -57,6 +57,7 @@
     "@types/prosemirror-commands": "^1.0.3",
     "@types/prosemirror-keymap": "^1.0.3",
     "@types/prosemirror-model": "^1.7.2",
+    "@types/prosemirror-schema-list": "^1.0.1",
     "@types/prosemirror-state": "^1.2.5",
     "@types/prosemirror-view": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
@@ -92,6 +93,7 @@
     "prosemirror-commands": "^1.1.4",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.11.0",
+    "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.3",
     "prosemirror-view": "^1.15.6"
   }
