--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -55,6 +55,7 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.1",
     "@types/prosemirror-commands": "^1.0.3",
+    "@types/prosemirror-history": "^1.0.1",
     "@types/prosemirror-keymap": "^1.0.3",
     "@types/prosemirror-model": "^1.7.2",
     "@types/prosemirror-schema-list": "^1.0.1",
@@ -91,6 +92,7 @@
   },
   "dependencies": {
     "prosemirror-commands": "^1.1.4",
+    "prosemirror-history": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.11.0",
     "prosemirror-schema-list": "^1.1.4",
