--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -91,6 +91,7 @@
     "webpack-glob-entry": "^2.1.1"
   },
   "dependencies": {
+    "htm": "^3.0.4",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-history": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
