feat: add snowpack

--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -33,7 +33,7 @@
     "test": "karma start --no-single-run",
     "test:ne": "cross-env KARMA_SERVER=ne karma start",
     "serve:all": "webpack-dev-server --all",
-    "serve": "webpack-dev-server",
+    "serve": "snowpack dev",
     "build:cdn": "webpack --mode=production --cdn & webpack --mode=production --cdn --minify",
     "build:cdn-all": "webpack --mode=production --cdn --all & webpack --mode=production --cdn --all --minify",
     "build": "webpack --mode=production && npm run build:cdn && npm run build:cdn-all"
@@ -42,6 +42,7 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@toast-ui/editor": "^2.0.0",
+    "@types/snowpack-env": "^2.3.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-istanbul": "^6.0.0",
     "cross-env": "^6.0.3",
@@ -61,6 +62,7 @@
     "karma-webdriver-launcher": "github:nhn/karma-webdriver-launcher#v1.2.0",
     "karma-webpack": "^4.0.2",
     "prettier": "^1.19.1",
+    "snowpack": "^3.0.13",
     "terser-webpack-plugin": "^2.3.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
