--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -42,7 +42,11 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@toast-ui/editor": "^2.0.0",
+    "@types/highlightjs": "^9.12.0",
+    "@types/node": "^14.14.31",
     "@types/snowpack-env": "^2.3.3",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-istanbul": "^6.0.0",
     "cross-env": "^6.0.3",
@@ -64,6 +68,7 @@
     "prettier": "^1.19.1",
     "snowpack": "^3.0.13",
     "terser-webpack-plugin": "^2.3.1",
+    "typescript": "^4.2.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
