wip: change from karma to jest

--- a/plugins/code-syntax-highlight/tsconfig.json
+++ b/plugins/code-syntax-highlight/tsconfig.json
@@ -19,5 +19,5 @@
     "lib": ["esnext", "dom", "dom.iterable"]
   },
   "include": ["src/**/*.ts", "src/**/*.js", "types/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
