--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toast-ui/editor-plugin-code-syntax-highlight",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha",
   "description": "TOAST UI Editor : Code Syntax Highlight Plugin",
   "keywords": [
     "nhn",
@@ -30,10 +30,11 @@
   "homepage": "https://ui.toast.com",
   "browserslist": "last 2 versions, not ie <= 10",
   "scripts": {
-    "test": "karma start --no-single-run",
-    "test:ne": "cross-env KARMA_SERVER=ne karma start",
-    "serve:all": "webpack-dev-server --all",
+    "lint": "eslint .",
+    "test": "jest --watch",
+    "test:types": "tsc",
     "serve": "snowpack dev",
+    "serve:all": "webpack-dev-server --all",
     "build:cdn": "webpack --mode=production --cdn & webpack --mode=production --cdn --minify",
     "build:cdn-all": "webpack --mode=production --cdn --all & webpack --mode=production --cdn --all --minify",
     "build": "webpack --mode=production && npm run build:cdn && npm run build:cdn-all"
@@ -41,33 +42,26 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@testing-library/jest-dom": "^5.11.9",
     "@toast-ui/editor": "^2.0.0",
     "@types/highlightjs": "^9.12.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/snowpack-env": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-istanbul": "^6.0.0",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-tui": "^3.0.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "^3.5.0",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.0",
-    "karma-jasmine-ajax": "^0.1.13",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webdriver-launcher": "github:nhn/karma-webdriver-launcher#v1.2.0",
-    "karma-webpack": "^4.0.2",
-    "prettier": "^1.19.1",
+    "jest": "^26.6.3",
+    "jest-serializer-html": "^7.0.0",
     "snowpack": "^3.0.13",
     "terser-webpack-plugin": "^2.3.1",
+    "ts-jest": "^26.5.2",
     "typescript": "^4.2.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
