--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -62,6 +62,7 @@
     "snowpack": "^3.0.13",
     "terser-webpack-plugin": "^2.3.1",
     "ts-jest": "^26.5.2",
+    "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
