--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -34,24 +34,29 @@
     "test": "jest --watch",
     "test:types": "tsc",
     "serve": "snowpack dev",
+    "serve:webpack": "webpack-dev-server",
     "serve:all": "webpack-dev-server --all",
     "build:cdn": "webpack --mode=production --cdn & webpack --mode=production --cdn --minify",
     "build:cdn-all": "webpack --mode=production --cdn --all & webpack --mode=production --cdn --all --minify",
     "build": "webpack --mode=production && npm run build:cdn && npm run build:cdn-all"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@toast-ui/editor": "^2.0.0",
-    "@types/highlightjs": "^9.12.0",
+    "@types/highlight.js": "^9.12.4",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
+    "@types/prosemirror-commands": "^1.0.3",
+    "@types/prosemirror-history": "^1.0.1",
+    "@types/prosemirror-keymap": "^1.0.3",
+    "@types/prosemirror-model": "^1.7.2",
+    "@types/prosemirror-state": "^1.2.5",
+    "@types/prosemirror-view": "^1.15.1",
     "@types/snowpack-env": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
-    "babel-loader": "^8.0.6",
     "cross-env": "^6.0.3",
+    "css-loader": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-tui": "^3.0.0",
@@ -59,17 +64,25 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^26.6.3",
     "jest-serializer-html": "^7.0.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "snowpack": "^3.0.13",
     "terser-webpack-plugin": "^2.3.1",
     "ts-jest": "^26.5.2",
     "ts-loader": "^8.0.17",
+    "tui-code-snippet": "^2.3.2",
     "typescript": "^4.2.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "highlight.js": "^9.18.1"
+    "highlight.js": "^9.18.1",
+    "prosemirror-commands": "^1.1.4",
+    "prosemirror-history": "^1.1.3",
+    "prosemirror-keymap": "^1.1.4",
+    "prosemirror-model": "^1.11.0",
+    "prosemirror-state": "^1.3.3",
+    "prosemirror-view": "^1.15.6"
   },
   "publishConfig": {
     "access": "public"
