--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -72,8 +72,8 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "highlight.js": "^9.18.1",
-    "lowlight": "^1.19.0",
+    "highlight.js": "^9.18.5",
+    "lowlight": "1.13.1",
     "prosemirror-state": "^1.3.3"
   },
   "publishConfig": {
