--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -65,8 +65,9 @@
     "terser-webpack-plugin": "^2.3.1",
     "ts-jest": "^26.5.2",
     "ts-loader": "^8.0.17",
+    "tslib": "^2.1.0",
     "tui-code-snippet": "^2.3.2",
-    "typescript": "^4.2.2",
+    "typescript": "^4.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
