--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -60,6 +60,7 @@
     "eslint-config-tui": "^3.0.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
+    "http-proxy": "^1.18.1",
     "jest": "^26.6.3",
     "jest-serializer-html": "^7.0.0",
     "mini-css-extract-plugin": "^1.3.9",
@@ -77,7 +78,8 @@
   "dependencies": {
     "highlight.js": "^9.18.5",
     "lowlight": "1.13.1",
-    "prosemirror-state": "^1.3.3"
+    "prosemirror-state": "^1.3.3",
+    "prosemirror-view": "^1.18.0"
   },
   "publishConfig": {
     "access": "public"
