--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
-    "@toast-ui/editor": "file:../../apps/editor",
+    "@toast-ui/editor": "^2.5.1",
     "@types/common-tags": "^1.8.0",
     "@types/highlight.js": "^9.12.4",
     "@types/jest": "^26.0.20",
@@ -78,12 +78,8 @@
   "dependencies": {
     "highlight.js": "^9.18.5",
     "lowlight": "1.13.1",
-<<<<<<< HEAD
     "prosemirror-state": "^1.3.3",
     "prosemirror-view": "^1.18.0"
-=======
-    "prosemirror-state": "^1.3.3"
->>>>>>> e81237b1... fix: change package version for highlighting
   },
   "publishConfig": {
     "access": "public"
