--- a/plugins/chart/package.json
+++ b/plugins/chart/package.json
@@ -51,6 +51,7 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.1",
     "jest-serializer-html": "^7.0.0",
     "mini-css-extract-plugin": "^1.3.9",
     "snowpack": "^3.0.13",
