--- a/plugins/chart/tsconfig.json
+++ b/plugins/chart/tsconfig.json
@@ -14,9 +14,9 @@
     "paths": {
       "@/*": ["src/*"],
     },
-    "typeRoots": ["node_modules/@types"],
+    "typeRoots": ["./types", "node_modules/@types"],
     "lib": ["esnext", "dom", "dom.iterable"]
   },
-  "include": ["src/**/*.ts", "src/**/*.js"],
+  "include": ["src/**/*.ts", "src/**/*.js", "types/**/*"],
   "exclude": ["node_modules"],
 }
