chore: move eslint, jest, typescript dependency to root

--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -35,7 +35,7 @@
   "browserslist": "last 2 versions, not ie <= 10",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest --watch",
+    "test": "../../node_modules/.bin/jest --watch",
     "test:types": "tsc",
     "serve": "snowpack dev --polyfill-node",
     "serve:all": "webpack-dev-server --all",
@@ -47,13 +47,10 @@
     "doc": "tuidoc"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.8",
     "@toast-ui/release-notes": "^2.0.1",
     "@toast-ui/to-mark": "file:../../libs/to-mark",
     "@toast-ui/toastmark": "file:../../libs/toastmark",
     "@types/common-tags": "^1.8.0",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.1",
     "@types/prosemirror-commands": "^1.0.3",
     "@types/prosemirror-history": "^1.0.1",
     "@types/prosemirror-inputrules": "^1.0.4",
@@ -62,28 +59,18 @@
     "@types/prosemirror-state": "^1.2.5",
     "@types/prosemirror-view": "^1.15.1",
     "@types/snowpack-env": "^2.3.2",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
     "common-tags": "^1.8.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-config-tui": "^3.0.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-prettier": "^3.1.2",
     "filemanager-webpack-plugin": "^2.0.5",
-    "jest": "^26.4.2",
-    "jest-serializer-html": "^7.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "resize-observer-polyfill": "^1.5.1",
     "snowpack": "^2.18.1",
     "terser-webpack-plugin": "^2.2.1",
-    "ts-jest": "^26.4.0",
     "ts-loader": "^8.0.3",
     "tui-code-snippet": "^2.3.1",
-    "typescript": "^4.0.2",
     "url-loader": "^3.0.0",
     "webpack": "^4.40.2",
     "webpack-bundle-analyzer": "^3.6.0",
