--- a/package.json
+++ b/package.json
@@ -5,10 +5,25 @@
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.34",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-tui": "^4.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "jest-esm-transformer": "^1.0.0",
+    "jest-serializer-html": "^7.0.0",
     "lerna": "^3.20.2",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "ts-jest": "^26.5.3",
+    "typescript": "^4.2.3"
   },
   "scripts": {
+    "test": "jest --watch",
     "build:editor": "lerna run --scope @toast-ui/editor build",
     "build:jquery": "lerna run --scope @toast-ui/jquery-editor build",
     "build:react": "lerna run --scope @toast-ui/react-editor build",
