--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -76,8 +76,8 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "highlight.js": "^9.18.5",
-    "lowlight": "1.13.1",
+    "highlight.js": "^10.6.0",
+    "lowlight": "^1.19.0",
     "prosemirror-state": "^1.3.3",
     "prosemirror-view": "^1.18.0"
   },
