--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "noEmit": true
-  },
+    "noEmit": true,
+  }
 }
