--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -37,8 +37,8 @@
     "lint": "eslint .",
     "test": "../../node_modules/.bin/jest --watch",
     "test:types": "../../node_modules/.bin/tsc",
-    "serve": "snowpack dev --polyfill-node",
     "serve:all": "webpack-dev-server --all",
+    "serve": "../../node_modules/.bin/snowpack dev",
     "build:i18n": "cross-env webpack --config scripts/webpack.config.i18n.js && webpack --config scripts/webpack.config.i18n.js --minify",
     "build:prod": "cross-env webpack --mode=production && webpack --mode=production --minify && node tsBannerGenerator.js",
     "build": "npm run build:i18n && npm run build:prod",
@@ -48,7 +48,6 @@
   },
   "devDependencies": {
     "@toast-ui/release-notes": "^2.0.1",
-    "@toast-ui/to-mark": "file:../../libs/to-mark",
     "@toast-ui/toastmark": "file:../../libs/toastmark",
     "@types/common-tags": "^1.8.0",
     "@types/prosemirror-commands": "^1.0.3",
@@ -58,7 +57,6 @@
     "@types/prosemirror-model": "^1.7.2",
     "@types/prosemirror-state": "^1.2.5",
     "@types/prosemirror-view": "^1.15.1",
-    "@types/snowpack-env": "^2.3.2",
     "common-tags": "^1.8.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
@@ -66,8 +64,6 @@
     "filemanager-webpack-plugin": "^2.0.5",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "resize-observer-polyfill": "^1.5.1",
-    "snowpack": "^2.18.1",
     "terser-webpack-plugin": "^2.2.1",
     "ts-loader": "^8.0.3",
     "tui-code-snippet": "^2.3.1",
