--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest-serializer-html": "^7.0.0",
     "lerna": "^3.20.2",
     "prettier": "^2.1.2",
+    "snowpack": "^3.0.13",
     "ts-jest": "^26.5.3",
     "typescript": "^4.2.3"
   },
