wip: add webpack dependency to root

--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -37,11 +37,11 @@
     "lint": "eslint .",
     "test": "../../node_modules/.bin/jest --watch",
     "test:types": "../../node_modules/.bin/tsc",
-    "serve:all": "webpack-dev-server --all",
-    "serve": "../../node_modules/.bin/snowpack dev",
-    "build:i18n": "cross-env webpack --config scripts/webpack.config.i18n.js && webpack --config scripts/webpack.config.i18n.js --minify",
-    "build:prod": "cross-env webpack --mode=production && webpack --mode=production --minify && node tsBannerGenerator.js",
-    "build": "npm run build:i18n && npm run build:prod",
+    "serve": "snowpack dev",
+    "serve:ie": "webpack serve",
+    "build:i18n": "cross-env webpack --config scripts/webpack.config.i18n.js && webpack --config scripts/webpack.config.i18n.js --env minify",
+    "build:prod": "cross-env webpack build && webpack build --env minify",
+    "build": "npm run build:prod",
     "note": "tui-note --tag=$(git describe --tags)",
     "doc:serve": "tuidoc --serv",
     "doc": "tuidoc"
@@ -59,19 +59,12 @@
     "@types/prosemirror-view": "^1.15.1",
     "common-tags": "^1.8.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.4.2",
-    "eslint-loader": "^3.0.3",
     "filemanager-webpack-plugin": "^2.0.5",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "terser-webpack-plugin": "^2.2.1",
-    "ts-loader": "^8.0.3",
     "tui-code-snippet": "^2.3.1",
     "url-loader": "^3.0.0",
-    "webpack": "^4.40.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.1.11",
     "webpack-glob-entry": "^2.1.1"
   },
   "dependencies": {
