--- a/libs/toastmark/package.json
+++ b/libs/toastmark/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1-alpha.1",
   "description": "ToastMark - Incremental markdown parser extended from CommonMark.js",
   "scripts": {
-    "serve": "webpack-dev-server",
+    "lint": "eslint .",
+    "test:types": "tsc",
+    "serve": "snowpack dev",
+    "serve:ie": "webpack serve",
     "build": "webpack --mode=production"
   },
   "types": "types/index.d.ts",
@@ -25,16 +28,7 @@
     "@types/mdurl": "^1.0.2",
     "codemirror": "^5.51.0",
     "common-tags": "^1.8.0",
-    "css-loader": "^3.4.2",
     "entities": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mdurl": "^1.0.1",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "^6.2.1",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "mdurl": "^1.0.1"
   }
 }
