--- a/package.json
+++ b/package.json
@@ -10,19 +10,29 @@
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-tui": "^4.0.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-webpack-plugin": "^2.5.2",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "jest-esm-transformer": "^1.0.0",
     "jest-serializer-html": "^7.0.0",
     "lerna": "^3.20.2",
     "prettier": "^2.1.2",
     "snowpack": "^3.0.13",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.3",
+    "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
-    "vm": "^0.1.0"
+    "vm": "^0.1.0",
+    "webpack": "^5.26.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "scripts": {
     "test:all": "jest --watch",
@@ -47,5 +57,6 @@
     "install:libs": "npm run install:toastmark && npm run install:to-mark",
     "build:libs": "npm run build:toastmark && npm run build:to-mark",
     "setup:libs": "npm run install:libs && npm run build:libs"
-  }
+  },
+  "dependencies": {}
 }
