--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "command-line-args": "^5.1.1",
     "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
@@ -17,6 +18,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-webpack-plugin": "^2.5.2",
     "html-webpack-plugin": "^5.3.1",
+    "http-proxy": "^1.18.1",
     "jest": "^26.6.3",
     "jest-esm-transformer": "^1.0.0",
     "jest-serializer-html": "^7.0.0",
@@ -35,28 +37,16 @@
     "webpack-merge": "^5.7.3"
   },
   "scripts": {
+    "lint:all": "lerna run --stream lint",
     "test:all": "jest --watch",
-    "lint:all": "eslint .",
-    "check-types:editor": "tsc --project ./apps/editor/tsconfig.json",
-    "check-types:toastmark": "tsc --project ./libs/toastmark/tsconfig.json",
-    "serve:editor": "node ./scripts/snowpack.js editor",
-    "serve:toastmark": "node ./scripts/snowpack.js toastmark",
-    "build:editor": "lerna run --scope @toast-ui/editor build",
-    "build:jquery": "lerna run --scope @toast-ui/jquery-editor build",
-    "build:react": "lerna run --scope @toast-ui/react-editor build",
-    "build:vue": "lerna run --scope @toast-ui/vue-editor build",
-    "build:chart": "lerna run --scope @toast-ui/editor-plugin-chart build",
-    "build:color-syntax": "lerna run --scope @toast-ui/editor-plugin-color-syntax build",
-    "build:code-syntax-highlight": "lerna run --scope @toast-ui/editor-plugin-code-syntax-highlight build",
-    "build:table-merged-cell": "lerna run --scope @toast-ui/editor-plugin-table-merged-cell build",
-    "build:uml": "lerna run --scope @toast-ui/editor-plugin-uml build",
-    "build:toastmark": "lerna run --scope @toast-ui/toastmark build",
-    "build:to-mark": "lerna run --scope @toast-ui/to-mark build",
-    "install:toastmark": "cd libs/toastmark && npm install",
-    "install:to-mark": "cd libs/to-mark && npm install",
     "install:libs": "npm run install:toastmark && npm run install:to-mark",
     "build:libs": "npm run build:toastmark && npm run build:to-mark",
-    "setup:libs": "npm run install:libs && npm run build:libs"
+    "setup:libs": "npm run install:libs && npm run build:libs",
+    "lint": "node ./scripts/pkg-script.js --script lint --type $type",
+    "test:types": "node ./scripts/pkg-script.js --script test:types --type $type",
+    "serve": "node ./scripts/pkg-script.js --script serve --type $type",
+    "serve:ie": "node ./scripts/pkg-script.js --script serve:ie --type $type",
+    "build": "node ./scripts/pkg-script.js --script build --type $type"
   },
   "dependencies": {
     "tslib": "^2.1.0"
