--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -34,20 +34,20 @@
     "test": "jest --watch",
     "test:types": "tsc",
     "serve": "snowpack dev --polyfill-node",
-    "serve:webpack": "webpack-dev-server",
-    "serve:all": "webpack-dev-server --all",
+    "serve:cdn": "webpack-dev-server",
+    "serve:cdn-all": "webpack-dev-server --all",
+    "build:langs": "rollup --config rollup.config.js",
     "build:cdn": "webpack --mode=production --cdn & webpack --mode=production --cdn --minify",
     "build:cdn-all": "webpack --mode=production --cdn --all & webpack --mode=production --cdn --all --minify",
-    "build": "webpack --mode=production && npm run build:cdn && npm run build:cdn-all"
+    "build": "webpack --mode=production && npm run build:cdn && npm run build:cdn-all && npm run build:langs"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@toast-ui/editor": "^2.5.1",
     "@types/common-tags": "^1.8.0",
-    "@types/highlight.js": "^9.12.4",
     "@types/jest": "^26.0.20",
-    "@types/lowlight": "0.0.1",
     "@types/node": "^14.14.31",
+    "@types/prismjs": "^1.16.3",
     "@types/prosemirror-state": "^1.2.5",
     "@types/snowpack-env": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -64,6 +64,7 @@
     "jest": "^26.6.3",
     "jest-serializer-html": "^7.0.0",
     "mini-css-extract-plugin": "^1.3.9",
+    "rollup": "^2.41.3",
     "snowpack": "^3.0.13",
     "terser-webpack-plugin": "^2.3.1",
     "ts-jest": "^26.5.2",
@@ -76,8 +77,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "highlight.js": "^9.18.5",
-    "lowlight": "1.13.1",
+    "prismjs": "^1.23.0",
     "prosemirror-state": "^1.3.3",
     "prosemirror-view": "^1.18.0"
   },
