--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -59,12 +59,7 @@
     "@types/prosemirror-view": "^1.15.1",
     "common-tags": "^1.8.0",
     "cross-env": "^6.0.3",
-    "filemanager-webpack-plugin": "^2.0.5",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "tui-code-snippet": "^2.3.1",
-    "url-loader": "^3.0.0",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "tui-code-snippet": "^2.3.1"
   },
   "dependencies": {
     "htm": "^3.0.4",
