--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@typescript-eslint/parser": "^4.17.0",
     "command-line-args": "^5.1.1",
     "css-loader": "^5.1.3",
+    "css-minimizer-webpack-plugin": "^1.3.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-tui": "^4.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-webpack-plugin": "^2.5.2",
+    "filemanager-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.3.1",
     "http-proxy": "^1.18.1",
     "jest": "^26.6.3",
     "jest-esm-transformer": "^1.0.0",
     "jest-serializer-html": "^7.0.0",
     "lerna": "^3.20.2",
+    "mini-css-extract-plugin": "^1.3.9",
     "prettier": "^2.1.2",
     "snowpack": "^3.0.13",
     "style-loader": "^2.0.0",
@@ -30,10 +33,13 @@
     "ts-jest": "^26.5.3",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
+    "url-loader": "^4.1.1",
     "vm": "^0.1.0",
     "webpack": "^5.26.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
+    "webpack-glob-entry": "^2.1.1",
     "webpack-merge": "^5.7.3"
   },
   "scripts": {
