--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-tui": "^4.0.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-webpack-plugin": "^2.5.2",
     "filemanager-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.3.1",
