--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-tui": "^4.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-vue": "^7.7.0",
     "eslint-webpack-plugin": "^2.5.2",
     "filemanager-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.3.1",
@@ -36,6 +37,9 @@
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "vm": "^0.1.0",
+    "vue-eslint-parser": "^7.6.0",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.26.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
