--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -13,9 +13,10 @@
     "highlight"
   ],
   "main": "dist/toastui-editor-plugin-code-syntax-highlight.js",
+  "types": "types/index.d.ts",
   "files": [
     "dist/*.js",
-    "index.d.ts"
+    "types"
   ],
   "author": "NHN FE Development Lab <dl_javascript@nhn.com>",
   "license": "MIT",
