--- a/plugins/code-syntax-highlight/package.json
+++ b/plugins/code-syntax-highlight/package.json
@@ -50,9 +50,7 @@
     "tui-code-snippet": "^2.3.2"
   },
   "dependencies": {
-    "prismjs": "^1.23.0",
-    "prosemirror-state": "^1.3.3",
-    "prosemirror-view": "^1.18.0"
+    "prismjs": "^1.23.0"
   },
   "publishConfig": {
     "access": "public"
