chore: arrange lock file and add tsconfig paths config to uml, color plugins

--- a/plugins/color-syntax/tsconfig.json
+++ b/plugins/color-syntax/tsconfig.json
@@ -4,6 +4,9 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+    },
     "typeRoots": ["./types", "node_modules/@types", "../../node_modules/@types"],
     "lib": ["esnext", "dom", "dom.iterable"]
   }
