--- a/apps/react-editor/package.json
+++ b/apps/react-editor/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test:types": "tsc",
     "lint": "eslint .",
+    "serve": "snowpack dev",
     "build": "webpack build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
 }
