--- a/package.json
+++ b/package.json
@@ -49,8 +49,6 @@
     "url-loader": "^4.1.1",
     "vm": "^0.1.0",
     "vue-eslint-parser": "^7.6.0",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.26.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
@@ -71,7 +69,7 @@
     "build": "node ./scripts/pkg-script.js --script build --type $type"
   },
   "workspaces": [
-    "apps/editor",
+    "apps/*",
     "libs/*",
     "plugins/*"
   ]
