--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "^4.17.0",
     "command-line-args": "^5.1.1",
     "common-tags": "^1.8.0",
+    "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.1.3",
     "css-minimizer-webpack-plugin": "^1.3.0",
     "eslint": "^7.22.0",
