--- a/plugins/table-merged-cell/package.json
+++ b/plugins/table-merged-cell/package.json
@@ -13,11 +13,9 @@
     "merged-cell"
   ],
   "main": "dist/toastui-editor-plugin-table-merged-cell.js",
-  "module": "dist/esm/index.js",
   "files": [
     "dist/*.js",
     "dist/*.css",
-    "dist/esm",
     "index.d.ts"
   ],
   "author": "NHN FE Development Lab <dl_javascript@nhn.com>",
@@ -39,8 +37,7 @@
     "serve": "snowpack dev",
     "serve:ie": "webpack serve",
     "build:cdn": "webpack build --env cdn & webpack build --env cdn minify",
-    "build": "npm run build:esm && webpack build && npm run build:cdn",
-    "build:esm": "snowpack build --config=./snowpack.build.config.js && rm ./dist/esm/index.css"
+    "build": "webpack build && npm run build:cdn"
   },
   "publishConfig": {
     "access": "public"
