--- a/plugins/color-syntax/package.json
+++ b/plugins/color-syntax/package.json
@@ -16,7 +16,7 @@
   "files": [
     "dist/*.js",
     "dist/*.css",
-    "index.d.ts"
+    "types/index.d.ts"
   ],
   "author": "NHN FE Development Lab <dl_javascript@nhn.com>",
   "license": "MIT",
