--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -56,8 +56,9 @@
     "build": "npm run build:esm && npm run build:i18n && npm run build:prod",
     "build:esm": "rollup -c",
     "note": "tui-note --tag=$(git describe --tags)",
-    "doc:serve": "tuidoc --serv",
-    "doc": "tuidoc"
+    "ts2js": "tsc --outDir tmpdoc --sourceMap false --target ES2015 --noEmit false",
+    "doc:dev": "npm run ts2js && tuidoc --serv",
+    "doc": "npm run ts2js && tuidoc"
   },
   "devDependencies": {
     "@toast-ui/release-notes": "^2.0.1",
