--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -21,8 +21,15 @@
       "require": "./dist/toastui-editor.js"
     },
     "./viewer": {
-      "import": "./dist/esm/indexViewer.js"
-    }
+      "import": "./dist/esm/indexViewer.js",
+      "require": "./dist/toastui-editor-viewer.js"
+    },
+    "./dist/toastui-editor.css": "./dist/toastui-editor.css",
+    "./dist/toastui-editor-viewer.css": "./dist/toastui-editor-viewer.css",
+    "./dist/theme/toastui-editor-dark.css": "./dist/theme/toastui-editor-dark.css",
+    "./toastui-editor.css": "./dist/toastui-editor.css",
+    "./toastui-editor-viewer.css": "./dist/toastui-editor-viewer.css",
+    "./toastui-editor-dark.css": "./dist/theme/toastui-editor-dark.css"
   },
   "types": "types/index.d.ts",
   "files": [
