--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -24,11 +24,14 @@
       "import": "./dist/esm/indexViewer.js",
       "require": "./dist/toastui-editor-viewer.js"
     },
+    "./dist/i18n/*": {
+      "import": "./dist/esm/i18n/*.js",
+      "require": "./dist/i18n/*.js"
+    },
     "./dist/toastui-editor-viewer": "./dist/toastui-editor-viewer.js",
     "./dist/toastui-editor.css": "./dist/toastui-editor.css",
     "./dist/toastui-editor-viewer.css": "./dist/toastui-editor-viewer.css",
     "./dist/theme/toastui-editor-dark.css": "./dist/theme/toastui-editor-dark.css",
-    "./dist/i18n/*": "./dist/i18n/*.js",
     "./toastui-editor.css": "./dist/toastui-editor.css",
     "./toastui-editor-viewer.css": "./dist/toastui-editor-viewer.css",
     "./toastui-editor-dark.css": "./dist/theme/toastui-editor-dark.css"
