chore: add module field to react package.json

--- a/apps/react-editor/package.json
+++ b/apps/react-editor/package.json
@@ -7,6 +7,7 @@
     "index.d.ts"
   ],
   "main": "dist/toastui-react-editor.js",
+  "module": "dist/esm/index.js",
   "scripts": {
     "test:types": "tsc",
     "lint": "eslint .",
