--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -8,9 +8,10 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
       - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '15.x'
+          cache: npm
       - name: Install
         run: |
           npm ci
