--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -7,9 +7,10 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
       - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '15.x'
+          cache: npm
       - name: Install
         run: |
           npm ci
@@ -26,9 +27,10 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
       - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '15.x'
+          cache: npm
       - name: Install
         run: |
           npm ci
@@ -48,9 +50,10 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
       - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '15.x'
+          cache: npm
       - name: Install
         run: |
           npm ci
@@ -85,16 +88,18 @@ jobs:
         with:
           path: ./apps/editor/
       - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '15.x'
+          cache: npm
       - name: Install
         run: |
           npm install
       - name: Use Node.js 10.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '10.x'
+          cache: npm
       - name: Install @toast-ui/doc
         run: |
           npm i -g @toast-ui/doc
